<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robobunny="http://robobunny.com" >

    <PreferenceCategory android:title="@string/connection_config" >
        <EditTextPreference
            android:dialogTitle="@string/server_url"
            android:inputType="textUri"
            android:key="server_url"
            android:maxLines="1"
            android:title="@string/server_url" />
        <EditTextPreference
            android:dialogTitle="@string/login"
            android:inputType="text"
            android:key="login"
            android:maxLines="1"
            android:title="@string/login" />
        <EditTextPreference
            android:dialogTitle="@string/password"
            android:inputType="textPassword"
            android:key="password"
            android:maxLines="1"
            android:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/map_config" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="rotate_map"
            android:title="@string/rotate_map" />

        <com.robobunny.SeekBarPreference
            android:defaultValue="0"
            android:key="extra_rotation_degrees_clockwise"
            android:max="360"
            android:title="@string/extra_rotation_degrees_clockwise"
            android:dependency="rotate_map"
            robobunny:min="0"
            robobunny:unitsLeft=""
            robobunny:unitsRight="度" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/voice_file" >
        <Preference android:key="voice_file_state" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/location_receive_config" >
        <EditTextPreference
            android:defaultValue="1000"
            android:dialogTitle="@string/location_receive_min_time"
            android:inputType="numberDecimal"
            android:key="location_receive_min_time"
            android:maxLines="1"
            android:title="@string/location_receive_min_time" />
        <EditTextPreference
            android:defaultValue="1"
            android:dialogTitle="@string/location_receive_min_distance"
            android:inputType="numberDecimal"
            android:key="location_receive_min_distance"
            android:maxLines="1"
            android:title="@string/location_receive_min_distance" />
        <EditTextPreference
            android:defaultValue="90000"
            android:dialogTitle="@string/location_receive_restart_timeout"
            android:inputType="numberDecimal"
            android:key="location_receive_restart_timeout"
            android:maxLines="1"
            android:title="@string/location_receive_restart_timeout" />
    </PreferenceCategory>

</PreferenceScreen>